--- a/index.html
+++ b/index.html
@@ -7,9 +7,25 @@
 
     <link rel='styling' href='style.css'/>
 
-    <title>Document</title>
+    <title>GWDS html portfolio</title>
 </head>
 <body>
-    
+    <h1>Hello World! This is a html portfolio.</h1>
+    <h2>Created By Mao, Chun Ho Lee 17041583</h2>
+    <h3>Graphic & Web Design Studio</h3>
+    <h4>University Of The West Of England</h4>
+    <h5></h5>
+
+
+
+
+
+
+
+
+
+
+
+
 </body>
 </html>
