--- a/index.html
+++ b/index.html
@@ -5,20 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel='styling' href='style.css'/>
+    <link rel='stylesheet' href='style.css'/>
 
     <title>GWDS html portfolio</title>
 </head>
 <body>
     <h1>Hello World! This is a html portfolio.</h1>
-<scd>
-    <des>Created By Mao, Chun Ho Lee 17041583</des>
+<scd><p class="school">Created By Mao, Chun Ho Lee 17041583</p>
     <des>Graphic & Web Design Studio</des>
     <des>University Of The West Of England</des>
     <des>HTML portfolio Assignment</des>
 </scd>
 
+<h2><p class="title">In this html site, I will be presenting all the logs and reports about the following tasks:</p></h2>
+<ol>
+    <li>1. Contrast</li>
 
+
+
+
+</ol>
 
 
 
