--- a/index.html
+++ b/index.html
@@ -11,15 +11,20 @@
 </head>
 <body>
     <h1>Hello World! This is a html portfolio.</h1>
-<scd><p class="school">Created By Mao, Chun Ho Lee 17041583</p>
-    <des>Graphic & Web Design Studio</des>
-    <des>University Of The West Of England</des>
-    <des>HTML portfolio Assignment</des>
-</scd>
+<div><p class="school">Created By Mao, Chun Ho Lee 17041583</p>
+    <p>Graphic & Web Design Studio</p>
+    <p>University Of The West Of England</p>
+    <p>HTML portfolio Assignment</p>
+</div>
 
-<h2><p class="title">In this html site, I will be presenting all the logs and reports about the following tasks:</p></h2>
+<h2><p class="title">In this html site, I will be presenting all the logs and short reflection paragraph
+     about the following tasks:</p></h2>
 <ol>
-    <li>1. Contrast</li>
+    <li>Contrast, Alginment, Repitition, Proximity Task (CARP)</li>
+    <li>HTML/Github Coding Task</li>
+    <li>User Experience Task (UX)</li>
+    <li>Typography Task</li>
+    <li>Sh</li>
 
 
 
