fixed paragraphs issue

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <h1>Hello World! This is a html portfolio.</h1>
-<div><p class="school">Created By Mao, Chun Ho Lee 17041583</p>
+<div class="scd"><p class="school">Created By Mao, Chun Ho Lee 17041583</p>
     <p>Graphic & Web Design Studio</p>
     <p>University Of The West Of England</p>
     <p>HTML portfolio Assignment</p>
