--- a/index.html
+++ b/index.html
@@ -24,13 +24,11 @@
     <li>HTML/Github Coding Task</li>
     <li>User Experience Task (UX)</li>
     <li>Typography Task</li>
-    <li>Sh</li>
-
-
-
-    
+  
 
 </ol>
+
+<div>Shall We Begin...?</div>
 
 
 
