--- a/index.html
+++ b/index.html
@@ -28,14 +28,20 @@
 
 </ol>
 
-<div>Shall We Begin...?</div>
+<div class = "begin"><p class = "beginning">Shall We Begin...?</p></div>
 
+<h3>.</h3>
+<h3>.</h3>
+<h3>.</h3>
+<h3>.</h3>
+<h3>.</h3>
+<h3>.</h3>
+<h3>.</h3>
+<h3>.</h3>
+<h3>.</h3>
+<h3>.</h3>
 
-
-
-
-
-
+<h4>CARP TASK</h4>
 
 
 
