--- a/index.html
+++ b/index.html
@@ -42,6 +42,30 @@
 <h3>.</h3>
 
 <h4>CARP TASK</h4>
+<p>Here is my six designs of the CARP Task</p>
+<p><img src="CARP Task/1st design.png" alt="1st Design"></a> </p>
+<p><img src="CARP Task/2nd design.png" alt="1st Design"></a> </p>
+<p><img src="CARP Task/3rd design.png" alt="1st Design"></a> </p>
+<p><img src="CARP Task/4th design-1.png" alt="1st Design"></a> </p>
+<p><img src="CARP Task/5th design-1.png" alt="1st Design"></a> </p>
+<p><img src="CARP Task/6th design-1.png" alt="1st Design"></a> </p>
+
+<h2><p class="Carp Tasks">During the designing procedure of the CARP Task, as I do not have very good concept when inspiration, I could only try to design them by 
+    following one principle which usually used for programming: KISS principle. The KISS principle stands for "Keep It Simple, Stupid", it reminds designers to 
+    design everything as simple as possible but including every critial elements.
+</p></h2>
+
+
+<h3>.</h3>
+<h3>.</h3>
+<h3>.</h3>
+<h3>.</h3>
+<h3>.</h3>
+<h3>.</h3>
+<h3>.</h3>
+<h3>.</h3>
+<h3>.</h3>
+<h3>.</h3>
 
 
 
