--- a/index.html
+++ b/index.html
@@ -67,6 +67,30 @@
 <h3>.</h3>
 <h3>.</h3>
 
+<h4>Typography Task</h4>
+<p>Here is my Typography Task</p>
+<p><img src="Typography Task/untitled.png" alt="Typography Task"></a> </p>
+
+<h2><p class="Typography Task reflection paragraph">When I was working on this task, I have also researched the designs which related to the 8 typographic design through
+    the internet, which has inspired me to complete the task by using Radial system. As a result, it is a simple design but fairly organized.
+</p></h2>
+
+<h3>.</h3>
+<h3>.</h3>
+<h3>.</h3>
+<h3>.</h3>
+<h3>.</h3>
+<h3>.</h3>
+<h3>.</h3>
+<h3>.</h3>
+<h3>.</h3>
+<h3>.</h3>
+
+<h4>Coding Task</h4>
+<p>Here is my Coding Tasks</p>
+<p><a href="wk1-ws/index.html" target = "_blank"> Week 1 task</a></p>
+<p><a href="wk2&3-ws/index.html" target = "_blank"> Week 2&3 task</a></p>
+
 
 
 </body>
