--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <p><img src="CARP Task/5th design-1.png" alt="1st Design"></a> </p>
 <p><img src="CARP Task/6th design-1.png" alt="1st Design"></a> </p>
 
-<h2><p class="Carp Tasks">During the designing procedure of the CARP Task, as I do not have very good concept when inspiration, I could only try to design them by 
+<h2><p class="Reflection paragraph">During the designing procedure of the CARP Task, as I do not have very good concept when inspiration, I could only try to design them by 
     following one principle which usually used for programming: KISS principle. The KISS principle stands for "Keep It Simple, Stupid", it reminds designers to 
     design everything as simple as possible but including every critial elements.
 </p></h2>
@@ -71,7 +71,7 @@
 <p>Here is my Typography Task</p>
 <p><img src="Typography Task/untitled.png" alt="Typography Task"></a> </p>
 
-<h2><p class="Typography Task reflection paragraph">When I was working on this task, I have also researched the designs which related to the 8 typographic design through
+<h2><p class="Reflection paragraph">When I was working on this task, I have also researched the designs which related to the 8 typographic design through
     the internet, which has inspired me to complete the task by using Radial system. As a result, it is a simple design but fairly organized.
 </p></h2>
 
@@ -90,6 +90,47 @@
 <p>Here is my Coding Tasks</p>
 <p><a href="wk1-ws/index.html" target = "_blank"> Week 1 task</a></p>
 <p><a href="wk2&3-ws/index.html" target = "_blank"> Week 2&3 task</a></p>
+<p>Unfortunatelly I have lost the original files of the Week 4 task, I am very sorry for that.</p>
+<p class = "Reflection paragraph">The coding task is being done in every week, in week 1 I was just learning how to create a html page with 
+    typing "Hello World", which is the most common sentence which people typed when they are programming first time, it is also a very meaningful sentence 
+    because this sentence is usually applied for making a demo for how a programming language used, and has the program be installed properly. In week 2 we 
+    have learned about adding contents into the page such as texts and images, also linking another html page into the current page. I have combined the week 3 task 
+    into week 2 task, the reason for that is because week 3 is about learning how to use css to styling the html page. Therefore, I combined week 2 and week 3 tasks in the 
+    same folder. I have commited all these tasks I got into my github repository.
+</p>
+
+<h3>.</h3>
+<h3>.</h3>
+<h3>.</h3>
+<h3>.</h3>
+<h3>.</h3>
+<h3>.</h3>
+<h3>.</h3>
+<h3>.</h3>
+<h3>.</h3>
+<h3>.</h3>
+
+<h4>User Experience Task</h4>
+<p>For the User experience, I was considering should I design the website as a single-scroll website or interactable website which has buttons to change to different
+    contents, however I am heavily inspired by the apple and playstation website, therefore this whole website is designed as a single-scroll website. As my priority user 
+    is Professor Mary Jackson, an interactable website will definitely gain more marks in the point of view of myself, but when I looked at the apple and playstation website,
+    especially in the pages with specific product, they have decided to use single-scroll website too. By using single-scroll design, it is more likely to be simple but including
+    a much more modern design. 
+</p>
+<p>Comparing Single-Scroll website and Interactable website, it does rely on user preferences and the device user used to view the website. When the user is using smartphones
+    to view a Single-Scroll website, it will be relatively easier because all they need to do is to keep scrolling the page and they do not require any further movement of
+    their fingers, and this also suits user who uses PC or laptop to view the website. However viewing an Interactable website requires more movement of user's hands, and for 
+    some user like professor Stephen William Hawking, who has difficulty on moving their body or hands, it is definitely giving a terrible user experience for them.
+</p>
+<p class = "Reflection paragraph">The coding task is being done in every week, in week 1 I was just learning how to create a html page with 
+    typing "Hello World", which is the most common sentence which people typed when they are programming first time, it is also a very meaningful sentence 
+    because this sentence is usually applied for making a demo for how a programming language used, and has the program be installed properly. In week 2 we 
+    have learned about adding contents into the page such as texts and images, also linking another html page into the current page. I have combined the week 3 task 
+    into week 2 task, the reason for that is because week 3 is about learning how to use css to styling the html page. Therefore, I combined week 2 and week 3 tasks in the 
+    same folder. I have commited all these tasks I got into my github repository.
+</p>
+
+
 
 
 
