--- a/index.html
+++ b/index.html
@@ -87,7 +87,8 @@
 <h3>.</h3>
 
 <h4>Coding Task</h4>
-<p>Here is my Coding Tasks</p>
+<p>Due to an error I am unable to produce href function to my Coding Tasks files, but I will commit them into the same folder called "Coding Task", you may find all the 
+    work inside the folder.</p>
 <p>Unfortunatelly I have lost the original files of the Week 4 task, I am very sorry for that.</p>
 <p class = "Reflection">The coding task is being done in every week, in week 1 I was just learning how to create a html page with 
     typing "Hello World", which is the most common sentence which people typed when they are programming first time, it is also a very meaningful sentence 
