--- a/index.html
+++ b/index.html
@@ -121,12 +121,9 @@
     their fingers, and this also suits user who uses PC or laptop to view the website. However viewing an Interactable website requires more movement of user's hands, and for 
     some user like professor Stephen William Hawking, who has difficulty on moving their body or hands, it is definitely giving a terrible user experience for them.
 </p>
-<p class = "Reflection">The coding task is being done in every week, in week 1 I was just learning how to create a html page with 
-    typing "Hello World", which is the most common sentence which people typed when they are programming first time, it is also a very meaningful sentence 
-    because this sentence is usually applied for making a demo for how a programming language used, and has the program be installed properly. In week 2 we 
-    have learned about adding contents into the page such as texts and images, also linking another html page into the current page. I have combined the week 3 task 
-    into week 2 task, the reason for that is because week 3 is about learning how to use css to styling the html page. Therefore, I combined week 2 and week 3 tasks in the 
-    same folder. I have commited all these tasks I got into my github repository.
+<p class = "Reflection">When I was completing this task I am aware my user is only Professor Jackson, but I would like to consider more because in real life my user can be 
+    anyone even they might not be considered as my user. Also considering the user experience element is relatively hard for me because it depends on user preferences rather
+    than designer's personal user experience.
 </p>
 
 
