--- a/index.html
+++ b/index.html
@@ -87,8 +87,7 @@
 <h3>.</h3>
 
 <h4>Coding Task</h4>
-<p>Due to an error I am unable to produce href function to my Coding Tasks files, but I will commit them into the same folder called "Coding Task", you may find all the 
-    work inside the folder.</p>
+<p>Due to an error I am unable to produce href function to my Coding Tasks files, but I will commit them in seperated links.</p>
 <p>Unfortunatelly I have lost the original files of the Week 4 task, I am very sorry for that.</p>
 <p class = "Reflection">The coding task is being done in every week, in week 1 I was just learning how to create a html page with 
     typing "Hello World", which is the most common sentence which people typed when they are programming first time, it is also a very meaningful sentence 
@@ -126,6 +125,29 @@
     than designer's personal user experience.
 </p>
 
+<h3>.</h3>
+<h3>.</h3>
+<h3>.</h3>
+<h3>.</h3>
+<h3>.</h3>
+<h3>.</h3>
+<h3>.</h3>
+<h3>.</h3>
+<h3>.</h3>
+<h3>.</h3>
+
+<h4>Reflective report for the whole coursework</h4>
+<p>When I first trying to design this html file, I started to consider the part of applying single-scroll design for the website as it is more user friendly for the point
+    of view of myself. I also considered the interactable website which has buttons to interact to different pages, however it makes me feel more difficult about positioning
+    the buttons, only one mistake during the positioning procedure it can turn the entire website into a terrible design. In addition, many company uses single-scroll 
+    design in their website. However in their website, they applied the single-scroll design with interactable element, for example: when you scroll down in the "https://www.apple.com/uk/iphone-13-pro/" 
+    the image in this website will magnify, and this design does upgrade a website into another level, it does make the website look like more advanced and elegent. 
+</p>
+<p>With all due respect I am very disappointed about my personal ability, I wish I could have design a website just like the iPhone 13 pro website because it is full of elegent and it is a very good design
+    for user to interact. However at least I have tried my best to complete the entire work with all knowledge I have currently learnt from Professor Jackson, and I really appreciate my work and Professor's assistance.
+    Several improvements can be applied into this website, such as resizing images in the website, apply different typography style into the website, having interactable options for my coding tasks (seems like I caused the error because of moving folders around).
+    Thank you for all the lecture and assistance in the semester 1, professor Jackson.
+</p>
 
 
 
