--- a/index.html
+++ b/index.html
@@ -149,8 +149,20 @@
     Thank you for all the lecture and assistance in the semester 1, professor Jackson.
 </p>
 
+<h3>.</h3>
+<h3>.</h3>
+<h3>.</h3>
+<h3>.</h3>
+<h3>.</h3>
+<h3>.</h3>
+<h3>.</h3>
+<h3>.</h3>
+<h3>.</h3>
+<h3>.</h3>
 
-
+<p>Social media platform which is for public</p>
+<p>Twitch : <a href="twitch.tv/maorx58" target="_blank"></a></p>
+<p>Youtube : <a href="https://www.youtube.com/channel/UCwiW2Dodt7GvWjfnmZyeVmA" target="_blank"></p>
 
 </body>
 </html>
