--- a/index.html
+++ b/index.html
@@ -161,8 +161,8 @@
 <h3>.</h3>
 
 <p>Social media platform which is for public</p>
-<p>Twitch : <a href="twitch.tv/maorx58" target="_blank"></a></p>
-<p>Youtube : <a href="https://www.youtube.com/channel/UCwiW2Dodt7GvWjfnmZyeVmA" target="_blank"></p>
+<p>Twitch : twitch.tv/maorx58</p>
+<p>Youtube : https://www.youtube.com/channel/UCwiW2Dodt7GvWjfnmZyeVmA</p>
 
 </body>
 </html>
