--- a/index.html
+++ b/index.html
@@ -88,6 +88,8 @@
 
 <h4>Coding Task</h4>
 <p>Due to an error I am unable to produce href function to my Coding Tasks files, but I will commit them in seperated links.</p>
+<p>Week 1 Task: https://github.com/MaoH2058/wk1-ws</p>
+<p>Week 2&3 Task: https://github.com/MaoH2058/wk2-ws</p>
 <p>Unfortunatelly I have lost the original files of the Week 4 task, I am very sorry for that.</p>
 <p class = "Reflection">The coding task is being done in every week, in week 1 I was just learning how to create a html page with 
     typing "Hello World", which is the most common sentence which people typed when they are programming first time, it is also a very meaningful sentence 
